--- a/IronPdfSample/Resources/Misc/ProductListTemplate.html
+++ b/IronPdfSample/Resources/Misc/ProductListTemplate.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">-->
 </head>
 
 <body>
